--- a/test/deployment.yaml
+++ b/test/deployment.yaml
@@ -20,6 +20,10 @@ spec:
         imagePullPolicy: Always
         image: replace-me
         env:
+        - name: NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         - name: TOKEN_AUDIENCE
           value: "aad-oidc-identity"
         - name: INTERNAL_PORT
